# SVScrapePy

./: README.md  __init__.py  pyproject.toml  requirements.txt  scraping_his_konstanz.py
.github/workflows/: scrape.yml  scraping_his_konstanz.py
SVscrapePy/: clean_prefixes.py  click_next_page.py  helpers.py  scrape_all_pages.py  scrape_data.py  scrape_inhalte.py  scrape_module.py  scrape_termine.py  scrape_zugeordnete_studiengaenge.py  scrapers.py  select_semester_and_set_courses.py
sv_scrape_his.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
